@@ -1,3 +1,11 @@
+TAG: gxdhtload-6-0-12-1
+DATE: 05/07/2018
+STAFF: lec
+CHANGES: TR12866/BIB_DataSet_Assoc removed
+per connie, turn off flagExperiments.sh until futher notice
+some changes were made to flagExperiments.py and pushed to Git,
+but no testing was done.
+
 TAG: gxdhtload-6-0-11-2
 DATE: 03/28/2018
 STAFF: sc
